--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
   <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
   <body style="margin : 0px; overflow: hidden;">
     <a-scene embedded arjs>
+    <a-assets>
       <a-marker preset="custom" type="pattern" url="tree.patt">
-        <a-entity
-          position="0 0 0"
-          scale="0.05 0.05 0.05"
-          gltf-model="https://arjs-cors-proxy.herokuapp.com/https://raw.githack.com/AR-js-org/AR.js/master/aframe/examples/image-tracking/nft/trex/scene.gltf"
-        ></a-entity>
+        <a-asset-item id="tree-obj" src="xmas.obj"></a-asset-item>
+        <a-asset-item id="tree-mtl" src="xmas.mtl"></a-asset-item>
+  </a-assets>
+
+  <a-entity obj-model="obj: #tree-obj; mtl: #tree-mtl"></a-entity>
       </a-marker>
       <a-entity camera></a-entity>
     </a-scene>
