--- a/index.html
+++ b/index.html
@@ -5,13 +5,8 @@
   <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
   <body style="margin : 0px; overflow: hidden;">
     <a-scene embedded arjs>
-    <a-assets>
       <a-marker preset="custom" type="pattern" url="tree.patt">
-        <a-asset-item id="tree-obj" src="xmas.obj"></a-asset-item>
-        <a-asset-item id="tree-mtl" src="xmas.mtl"></a-asset-item>
-  </a-assets>
-
-  <a-entity obj-model="obj: #tree-obj; mtl: #tree-mtl"></a-entity>
+        <a-entity obj-model="obj: url('xmas.obj'); mtl: url('xmas.mtl')"></a-entity>
       </a-marker>
       <a-entity camera></a-entity>
     </a-scene>
