--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
   <body style="margin : 0px; overflow: hidden;">
     <a-scene embedded arjs>
       <a-marker preset="custom" type="pattern" url="tree.patt">
-        <a-entity obj-model="obj: url('xmas.obj'); mtl: url('xmas.mtl')"></a-entity>
+        <a-entity position="0 -1 0"
+                  scale="0.05 0.05 0.05"
+                  obj-model="obj: url('xmas.obj'); mtl: url('xmas.mtl')"></a-entity>
       </a-marker>
       <a-entity camera></a-entity>
     </a-scene>
