--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
     <a-scene embedded arjs>
       <a-marker preset="custom" type="pattern" url="tree.patt">
         <a-entity position="0 -1 0"
-                  scale="0.05 0.05 0.05"
-                  obj-model="obj: url('xmas.obj'); mtl: url('xmas.mtl')"></a-entity>
+                  scale="1.05 1.05 1.05"
+                  obj-model="obj: url(/path/to/tree.obj); mtl: url(/path/to/tree.mtl)"></a-entity>
+        
       </a-marker>
       <a-entity camera></a-entity>
     </a-scene>
