--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <body style="margin : 0px; overflow: hidden;">
     <a-scene embedded arjs>
       <a-marker preset="custom" type="pattern" url="tree.patt">
+        <a-sphere color="yellow" radius="5"></a-sphere>
         <a-entity position="0 -1 0"
                   scale="1.05 1.05 1.05"
                   obj-model="obj: url(xmas.obj); mtl: url(xmas.mtl)"></a-entity>
