--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
   <body style="margin : 0px; overflow: hidden;">
     <a-scene embedded arjs='sourceType: webcam; debugUIEnabled: true;'>
-      <a-marker preset="custom" type="pattern" url="tree.patt">
+      <a-marker preset="hiro">
         <a-sphere color="yellow" radius="5"></a-sphere>
         <a-entity position="0 -1 0"
                   scale="1.05 1.05 1.05"
