--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
   <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
   <body style="margin : 0px; overflow: hidden;">
     <a-scene embedded arjs='sourceType: webcam; debugUIEnabled: true;'>
+        <a-assets>
+    <a-asset-item id="tree-obj" src="xmas.obj"></a-asset-item>
+    <a-asset-item id="tree-mtl" src="xmas.mtl"></a-asset-item>
+  </a-assets>
       <a-marker preset="hiro">
-        <a-entity position="1 0 0"
-                  scale=".05 .05 .05"
-                  obj-model="obj: url(xmas.obj); mtl: url(xmas.mtl)"></a-entity>
+        <a-entity obj-model="obj: #tree-obj; mtl: #tree-mtl" position="1 0 0"></a-entity>
         <a-sphere color="yellow" radius="1" position="1 0 0"></a-sphere>
         
       </a-marker>
