--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </a-assets>
       <a-marker preset="hiro">
         <a-entity obj-model="obj: #tree-obj; mtl: #tree-mtl" position="1 0 0"></a-entity>
-        <a-sphere color="yellow" radius="1" position="1 0 0"></a-sphere>
+        <a-sphere color="blue" radius="1" position="1 0 0"></a-sphere>
         
       </a-marker>
       <a-entity camera></a-entity>
