--- a/index.html
+++ b/index.html
@@ -6,11 +6,10 @@
   <body style="margin : 0px; overflow: hidden;">
     <a-scene embedded arjs='sourceType: webcam; debugUIEnabled: true;'>
         <a-assets>
-    <a-asset-item id="tree-obj" src="xmas.obj"></a-asset-item>
-    <a-asset-item id="tree-mtl" src="xmas.mtl"></a-asset-item>
+    <a-asset-item id="xmas" src="scene.glb"></a-asset-item>
   </a-assets>
       <a-marker preset="hiro">
-        <a-entity obj-model="obj: #tree-obj; mtl: #tree-mtl" position="0 0 0"></a-entity>
+        <a-entity gltf-model="#xmas" position="0 0 0"></a-entity>
         <a-sphere color="blue" radius="1" position="0 0 0"></a-sphere>
         
       </a-marker>
