--- a/index.html
+++ b/index.html
@@ -8,10 +8,8 @@
         <a-assets>
     <a-asset-item id="xmas" src="scene.glb"></a-asset-item>
   </a-assets>
-      <a-marker preset="hiro">
-        <a-entity gltf-model="#xmas" position="0 0 0"></a-entity>
-        <a-sphere color="blue" radius="1" position="0 0 0"></a-sphere>
-        
+<a-marker-camera type='pattern' url='tree.patt'>
+      <a-entity gltf-model="#xmas" position="0 0 0" scale="0.5 0.5 0.5"></a-entity>        
       </a-marker>
       <a-entity camera></a-entity>
     </a-scene>
