--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
   <!-- we import arjs version without NFT but with marker + location based support -->
   <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
   <body style="margin : 0px; overflow: hidden;">
-    <a-scene embedded arjs='sourceType: webcam; debugUIEnabled: true;'>
+    <a-scene embedded arjs='sourceType: webcam; debugUIEnabled: false;'>
         <a-assets>
-    <a-asset-item id="xmas" src="scene.glb"></a-asset-item>
+    <a-asset-item id="outside" src="cardoutside.glb"></a-asset-item>
   </a-assets>
 <a-marker-camera type='pattern' url='tree.patt'>
-      <a-entity gltf-model="#xmas" position="0 0 0" scale="0.5 0.5 0.5"></a-entity>        
+      <a-entity gltf-model="#outside" position="0 0 0" scale="0.25 0.25 0.25"></a-entity>        
       </a-marker>
       <a-entity camera></a-entity>
     </a-scene>
