--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <a-asset-item id="outside" src="cardoutside.glb"></a-asset-item>
   </a-assets>
 <a-marker-camera type='pattern' url='tree.patt'>
-      <a-entity gltf-model="#outside" position="0 0 0" scale="0.25 0.25 0.25"></a-entity>        
+      <a-entity gltf-model="#outside" position="0 0 0" scale="0.25 0.25 0.25" rotation="270 0 0"></a-entity>        
       </a-marker>
       <a-entity camera></a-entity>
     </a-scene>
