--- a/index.html
+++ b/index.html
@@ -7,9 +7,13 @@
     <a-scene embedded arjs='sourceType: webcam; debugUIEnabled: false;'>
         <a-assets>
     <a-asset-item id="outside" src="cardoutside.glb"></a-asset-item>
+    <a-asset-item id="inside" src="inside.glb"></a-asset-item>
   </a-assets>
 <a-marker-camera type='pattern' url='tree.patt'>
-      <a-entity gltf-model="#outside" position="0 0 0" scale="0.25 0.25 0.25" rotation="270 0 0"></a-entity>        
+      <a-entity gltf-model="#outside" position="0 1 1" scale="0.25 0.25 0.25" rotation="270 0 0"></a-entity>        
+      </a-marker>
+      <a-marker-camera type='pattern' url='pattern-holy.patt'>
+      <a-entity gltf-model="#inside" position="0 1 1" scale="0.5 0.5 0.5" rotation="0 0 0"></a-entity>        
       </a-marker>
       <a-entity camera></a-entity>
     </a-scene>
