--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <body style="margin : 0px; overflow: hidden;">
     <a-scene embedded arjs='sourceType: webcam; debugUIEnabled: false;'>
         <a-assets>
-    <a-asset-item id="outside" src="cardoutside.glb"></a-asset-item>
+    <a-asset-item id="outside" src="inside.glb"></a-asset-item>
   </a-assets>
 <a-marker-camera type='pattern' url='tree.patt'>
       <a-entity gltf-model="#outside" position="0 .5 .25" scale="0.25 0.25 0.25" rotation="270 0 0"></a-entity>        
