--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <a-assets>
     <a-asset-item id="outside" src="inside.glb"></a-asset-item>
   </a-assets>
-<a-marker-camera type='pattern' url='tree.patt'>
+<a-marker-camera type='pattern' url='tree.patt' smooth='true'>
       <a-entity gltf-model="#outside" position="0 .5 .5" scale="0.25 0.25 0.25" rotation="270 0 0"></a-entity>        
       </a-marker>
       <a-entity camera></a-entity>
