--- a/index.html
+++ b/index.html
@@ -6,11 +6,15 @@
   <body style="margin : 0px; overflow: hidden;">
     <a-scene embedded arjs='sourceType: webcam; debugUIEnabled: false;'>
         <a-assets>
-    <a-asset-item id="outside" src="inside.glb"></a-asset-item>
+    <a-asset-item id="inside" src="inside.glb"></a-asset-item>
   </a-assets>
 <a-marker-camera type='pattern' url='tree.patt' smooth='true'>
-      <a-entity gltf-model="#outside" position="0 .5 .5" scale="0.25 0.25 0.25" rotation="270 0 0"></a-entity>        
+      <a-entity gltf-model="#inside" position="0 .5 .5" scale="0.25 0.25 0.25" rotation="270 0 0"></a-entity>        
       </a-marker>
+      <a-marker-camera type='pattern' url='pattern-holly.patt' smooth='true'>
+      <a-entity gltf-model="#inside" position="0 .5 .5" scale="0.25 0.25 0.25" rotation="270 0 0"></a-entity>        
+      </a-marker>
+
       <a-entity camera></a-entity>
     </a-scene>
   </body>
