--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
         <a-assets>
     <a-asset-item id="inside" src="inside.glb"></a-asset-item>
   </a-assets>
-<a-marker-camera type='pattern' url='tree.patt' smooth='true'>
+<a-marker type='pattern' url='tree.patt' smooth='true'>
       <a-entity gltf-model="#inside" position="0 .5 .5" scale="0.25 0.25 0.25" rotation="270 0 0"></a-entity>        
       </a-marker>
-      <a-marker-camera type='pattern' url='pattern-holly.patt' smooth='true'>
+      <a-marker type='pattern' url='pattern-holly.patt' smooth='true'>
       <a-entity gltf-model="#inside" position="0 .5 .5" scale="0.25 0.25 0.25" rotation="270 0 0"></a-entity>        
       </a-marker>
 
