--- a/index.html
+++ b/index.html
@@ -7,11 +7,13 @@
     <a-scene embedded arjs='sourceType: webcam; debugUIEnabled: false;'>
         <a-assets>
     <a-asset-item id="inside" src="inside.glb"></a-asset-item>
+          <a-asset-item id="outside" src="cardoutside.glb"></a-asset-item>
+          
   </a-assets>
-<a-marker type='pattern' url='tree.patt' smooth='true'>
+<a-marker type='pattern' url='tree.patt'>
       <a-entity gltf-model="#inside" position="0 .5 .5" scale="0.25 0.25 0.25" rotation="270 0 0"></a-entity>        
       </a-marker>
-      <a-marker type='pattern' url='pattern-holly.patt' smooth='true'>
+      <a-marker type='pattern' url='pattern-holly.patt'>
       <a-entity gltf-model="#inside" position="0 .5 .5" scale="0.25 0.25 0.25" rotation="270 0 0"></a-entity>        
       </a-marker>
 
