--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <a-marker type='pattern' url='tree.patt'>
       <a-entity gltf-model="#outside" position="0 .5 .5" scale="0.25 0.25 0.25" rotation="270 0 0"></a-entity>        
       </a-marker>
-      <a-marker type='pattern' url='pattern-holly.patt'>
+      <a-marker preset='hiro'>
           <a-entity gltf-model="#inside" position="0 .5 .5" scale="0.25 0.25 0.25" rotation="270 0 0"></a-entity>        
       </a-marker>
 
