--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
         <a-assets>
     <a-asset-item id="inside" src="inside.glb"></a-asset-item>
           <a-asset-item id="outside" src="cardoutside.glb"></a-asset-item>
-          
+          <a-asset-item id="parcelme" src="parcelme.glb"></a-asset-item>
   </a-assets>
 <a-marker type='pattern' url='tree.patt'>
-      <a-entity gltf-model="#inside" position="0 .5 .5" scale="0.25 0.25 0.25" rotation="270 0 0"></a-entity>        
+      <a-entity gltf-model="#outside" position="0 .5 .5" scale="0.25 0.25 0.25" rotation="270 0 0"></a-entity>        
       </a-marker>
       <a-entity camera></a-entity>
     </a-scene>
