--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
           <a-asset-item id="parcelme" src="parcelme.glb"></a-asset-item>
   </a-assets>
 <a-marker type='pattern' url='tree.patt'>
-      <a-entity gltf-model="#parcelme" position="0 .5 .5" scale="0.25 0.25 0.25" rotation="270 0 0"></a-entity>        
+      <a-entity gltf-model="#inside" position="0 .5 .5" scale="0.25 0.25 0.25" rotation="270 0 0"></a-entity>        
+      <a-entity gltf-model="#parcelme" position="0 1.5 .5" scale="0.25 0.25 0.25" rotation="270 0 0"></a-entity>        
       </a-marker>
       <a-entity camera></a-entity>
     </a-scene>
