--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <a-scene embedded arjs='sourceType: webcam; debugUIEnabled: false;'>
         <a-assets>
     <a-asset-item id="inside" src="inside.glb"></a-asset-item>
-          <a-asset-item id="outside" src="23.glb"></a-asset-item>
+          <a-asset-item id="outside" src="outside.glb"></a-asset-item>
           <a-asset-item id="parcelme" src="parcelme.glb"></a-asset-item>
   </a-assets>
 <a-marker type='pattern' url='tree.patt'>
